--- a/envoy/envoy.yaml
+++ b/envoy/envoy.yaml
@@ -1,57 +1,40 @@
+admin:
+  access_log_path: /tmp/admin_access.log
+  address:
+    socket_address: { address: 0.0.0.0, port_value: 8001 }
 static_resources:
   listeners:
-  - address:
-      socket_address:
-        address: 0.0.0.0
-        port_value: 8080
+  - name: listener_0
+    address:
+      socket_address: { address: 0.0.0.0, port_value: 8081 }
     filter_chains:
     - filters:
-      - name: envoy.filters.network.http_connection_manager
-        typed_config:
-          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
-          codec_type: auto
+      - name: envoy.http_connection_manager
+        config:
           stat_prefix: ingress_http
           route_config:
             name: local_route
             virtual_hosts:
-            - name: backend
-              domains:
-              - "*"
+            - name: local_service
+              domains: ["*"]
               routes:
-              - match:
+              - match: 
                   prefix: "/"
-                route:
-                  cluster: teastore
+                route: 
+                  cluster: service
           http_filters:
-          - name: envoy.filters.http.router
-            typed_config: {}
+          - name: envoy.router
   clusters:
-  - name: teastore
+  - name: service
     connect_timeout: 0.25s
     type: strict_dns
     lb_policy: round_robin
-    http2_protocol_options: {}
     load_assignment:
-      cluster_name: teastore
+      cluster_name: service
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
                 address: webui
-                port_value: 3000
-admin:
-  access_log_path: "/dev/null"
-  address:
-    socket_address:
-      address: 0.0.0.0
-      port_value: 8001
-layered_runtime:
-  layers:
-    - name: static_layer_0
-      static_layer:
-        envoy:
-          resource_limits:
-            listener:
-              example_listener_name:
-                connection_limit: 10000
+                port_value: 8080
