--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,16 @@ services:
     networks:
       - envoymesh
     restart: always
+  jaeger:
+    image: jaegertracing/all-in-one
+    environment:
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+    networks:
+      - envoymesh
+    ports:
+      - "9411:9411"
+      - "16686:16686"
+      - "5775:5775/udp"
 networks:
   envoymesh: {}
 volumes: 
